--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,7 +33,8 @@ jobs:
     strategy:
       matrix:
         node-version: [16.x, 18.x, 20.x]
-        os: [ubuntu-20.04, windows-latest, macos-latest]
+        os: [ubuntu-20.04]
+        # os: [ubuntu-20.04, windows-latest, macos-latest]
         exclude:
           - os: windows-latest
             node-version: 16.x
