--- a/package.json
+++ b/package.json
@@ -19,37 +19,37 @@
     "test": "npx jest"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.4.2",
-    "@fortawesome/free-brands-svg-icons": "^6.4.2",
-    "@fortawesome/free-regular-svg-icons": "^6.4.2",
-    "@fortawesome/react-fontawesome": "0.2.0",
-    "dayjs": "^1.11.10",
-    "markdown-to-jsx": "^7.3.2",
+    "@fortawesome/fontawesome-svg-core": "^6.7.1",
+    "@fortawesome/free-brands-svg-icons": "^6.7.1",
+    "@fortawesome/free-regular-svg-icons": "^6.7.1",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "dayjs": "^1.11.13",
+    "markdown-to-jsx": "^7.6.2",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-burger-menu": "^3.0.9",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-ga": "^3.3.1",
-    "react-helmet-async": "^1.3.0",
-    "react-router-dom": "^6.18.0",
+    "react-helmet-async": "^2.0.5",
+    "react-router-dom": "^6.28.0",
     "react-scripts": "^5.0.1"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.23.3",
-    "@babel/preset-env": "^7.23.2",
-    "@babel/preset-react": "^7.23.3",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.5.1",
+    "@babel/eslint-parser": "^7.25.9",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
     "babel-jest": "^29.7.0",
-    "eslint": "^8.53.0",
+    "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-jsx-a11y": "6.7.1",
-    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.2",
     "react-snap": "^1.23.0",
-    "rimraf": "^5.0.5",
-    "sass": "^1.69.5",
+    "rimraf": "^6.0.1",
+    "sass": "^1.81.0",
     "source-map-explorer": "^2.5.3"
   },
   "browserslist": {
