--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -115,7 +115,7 @@ jobs:
       fail-fast: false
       matrix:
         node-version: [20.x, 22.x]
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest]
         exclude:
           # Reduce matrix size for faster CI
           - os: windows-latest
